<resources>
    <string name="app_name">GermanTrainieren</string>
    <string name="articles">Play with articles</string>
    <string name="plurals">Play with plurals</string>
    <string name="edit_list">Edit yout List</string>
    <string name="save">Save a new word</string>
    <string name="delete">Delete existing word</string>
    <string name="deleteSelected">Delete selected word</string>
    <string name="new_article">Enter an article</string>
    <string name="new_singular">Enter the singular</string>
    <string name="new_plural">Enter the plural</string>
    <string name="filter">Find your word</string>
    <string name="check_answer_btn">Check your answer</string>
    <string name="load_list">Load your list</string>
    <string name="api_url">http://germanapi.apphb.com/</string>
    <string name="playWithArticlesPlaceholder">What is the article of</string>
    <string name="playWithPluralsPlaceholder">What is the plural of</string>
    <string name="derTxt">DER</string>
    <string name="dieTxt">DIE</string>
    <string name="singular">Singular</string>
    <string name="plural">Plural</string>
    <string name="id">Id</string>
    <string name="article">Article</string>
    <string name="dastxt">DAS</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="correct">Correct!</string>
    <string name="wrongArticle">Wrong! The correct article is</string>
    <string name="over">The quiz is over!</string>
    <string name="fromSingulars">from Singulars</string>
    <string name="selectFromList">Please select an item from the list</string>
    <string name="wrongPlural">Wrong! The correct plural is</string>
    <string name="selectAnAnswer">Please select an answer</string>
    <string name="wrongCreds">Wrong credentials!</string>
    <string name="waitForServer">Please wait for server response</string>
    <string name="allValues">You must enter all the values</string>
    <string name="nextQst">NEXT</string>
    <string name="OK">OK</string>
    <string name="correctLabel">Correct:</string>
    <string name="falseLabel">False:</string>
    <string name="remainingLabel">Remaining:</string>
    <string name="correctLabelPlural">CorrectPlural:</string>
    <string name="falseLabelPlural">FalsePlural:</string>
    <string name="remainingLabelPlural">RemainingPlural:</string>
</resources>
