<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_textview_border">
    <EditText
        android:id="@+id/username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>
</LinearLayout>-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/dialog_textview_border"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@android:color/white"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/cursor_drawable"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline32"
        app:layout_constraintStart_toStartOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@android:color/white"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/cursor_drawable"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toStartOf="@+id/guideline32"
        app:layout_constraintStart_toStartOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/signin"
        app:layout_constraintStart_toStartOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/guideline35" />

    <Button
        android:id="@+id/signin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:text="@string/OK"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline32"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="197dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
